white space fix in schedule posts

--- a/design-final/css/style.css
+++ b/design-final/css/style.css
@@ -277,7 +277,7 @@ body {
   margin: 16px 0;
 }
 .schedule-container .posts .post {
-  margin-bottom: 16px;
+  padding: 4px 8px;
 }
 .schedule-container .posts .post-img {
   width: 2em;
